erDiagram
    countries {
        SERIAL key PK
        VARCHAR name "NOT NULL UNIQUE"
    }
    
    fields_of_study {
        INTEGER key PK
        VARCHAR field "NOT NULL"
    }
    
    scholarships_common {
        SERIAL key PK
        VARCHAR funding "CHECK: Partial/Full/Unknown"
        VARCHAR level "CHECK: Bachelor/Master/PhD/PostDoc/Faculty"
        VARCHAR required_level "CHECK: High School/Bachelor/Master/PhD/PostDoc/Faculty"
        VARCHAR intake "CHECK: Fall/Spring"
        VARCHAR status "CHECK: Open/Closed"
    }
    
    universities {
        SERIAL key PK
        VARCHAR university "NOT NULL"
        INTEGER country_key FK
    }
    
    scholarships_erasmus {
        INTEGER key PK
        VARCHAR name
        VARCHAR url
        TEXT description
        FLOAT duration
        BOOLEAN scholarship_available_for_current_intake
        TEXT required_documents
        TEXT course_topics
        VARCHAR courses_details_link
        VARCHAR deadlines_more_details_link
        VARCHAR scholarship_more_details_link
        TEXT other_scholarships
        VARCHAR requirements_more_details_link
        VARCHAR mobility_link
        TEXT requirements
        TEXT others
        VARCHAR programme_tuition_cov
        VARCHAR programme_tuition_details
        VARCHAR programme_monthly_allowance
        VARCHAR programme_installation_costs
        VARCHAR partner_tuition_cov
        VARCHAR partner_tuition_details
        VARCHAR partner_monthly_allowance
        VARCHAR partner_installation_costs
    }
    
    scholarships_fields {
        INTEGER sch_key PK,FK
        INTEGER field_key PK,FK
    }
    
    origin_countries_sch {
        INTEGER sch_key PK,FK
        INTEGER country_key PK,FK
    }
    
    program_countries_sch {
        INTEGER sch_key PK,FK
        INTEGER country_key PK,FK
    }
    
    important_dates {
        INTEGER sch_key FK
        DATE date
        VARCHAR description
        TEXT comments
    }
    
    deadlines {
        INTEGER sch_key FK
        DATE date
        VARCHAR description
        TEXT comments
    }
    
    sch_uni {
        INTEGER sch_key PK,FK
        INTEGER uni_key PK,FK
    }

    %% Relationships
    countries ||--o{ universities : "country_key"
    countries ||--o{ origin_countries_sch : "country_key"
    countries ||--o{ program_countries_sch : "country_key"
    
    scholarships_common ||--|| scholarships_erasmus : "key"
    scholarships_common ||--o{ scholarships_fields : "sch_key"
    scholarships_common ||--o{ origin_countries_sch : "sch_key"
    scholarships_common ||--o{ program_countries_sch : "sch_key"
    scholarships_common ||--o{ important_dates : "sch_key"
    scholarships_common ||--o{ deadlines : "sch_key"
    scholarships_common ||--o{ sch_uni : "sch_key"
    
    fields_of_study ||--o{ scholarships_fields : "field_key"
    
    universities ||--o{ sch_uni : "uni_key"